feat: add structure html in the project

--- a/index.html
+++ b/index.html
@@ -17,8 +17,128 @@
     <script src="./scripts/index.js" defer></script>
   </head>
   <body>
-    <header></header>
-    <main>
-    </main>
+    <div>
+      <nav>
+        <img src="" alt="" />
+        <p></p>
+      </nav>
+      <main>
+        <div>
+          <header>
+            <span>ONLINE - GRATUITO</span>
+            <h1>SORTEADOR DE NÚMEROS</h1>
+          </header>
+        </div>
+
+        <section>
+          <div>
+            <header>
+              <h2>Quero sortear:</h2>
+              <p>
+                defina o intervalo e a quantidade de números, clique em
+                "Sortear" e veja os resultados na tela. É rápido e fácil!
+              </p>
+            </header>
+
+            <div>
+              <form>
+                <fieldset>
+                  <section>
+                    <label for="qtdnumbers">NÚMEROS</label>
+                    <input type="text" id="qtdnumbers" name="qtdnumbers" />
+                  </section>
+
+                  <section>
+                    <label for="initNumber">DE</label>
+                    <input type="text" id="initNumber" name="initNumber" />
+                  </section>
+
+                  <section>
+                    <label for="finalyNumber">NÚMEROS</label>
+                    <input type="text" id="finalyNumber" name="finalyNumber" />
+                  </section>
+                </fieldset>
+
+                <fieldset>
+                  <div>
+                    <div>
+                      <label>Não repetir números</label>
+
+                      <div>
+                        <div>
+                          <input
+                            type="radio"
+                            name="type"
+                            id="yes"
+                            value="yes"
+                            checked
+                          />
+                        </div>
+
+                        <div>
+                          <input
+                            type="radio"
+                            name="type"
+                            id="not"
+                            value="not"
+                          />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <button>
+                    <span>SORTEAR</span>
+                    <img src="" alt="" />
+                  </button>
+                </fieldset>
+              </form>
+            </div>
+          </div>
+
+          <div>
+            <header>
+              <h2>RESULTADO DO SORTEIO</h2>
+              <span>1° RESULTADO</span>
+            </header>
+            <div>
+              <div>
+                <span>23</span>
+                <span>12</span>
+              </div>
+
+              <button>
+                <span>SORTEAR NOVAMENTE</span>
+                <img src="" alt="" />
+              </button>
+            </div>
+          </div>
+        </section>
+
+        <section>
+          <div>
+            <img src="" alt="" />
+            <div>
+              <h3>Como funciona o sorteador de núemros?</h3>
+              <p>
+                O sorteador utiliza um algoritmo de geração aleatória para criar
+                números dentro do intervalo especificado pelo usuário.
+              </p>
+            </div>
+          </div>
+
+          <div>
+            <img src="" alt="" />
+            <div>
+              <h3>Posso escolher o intervalo dos números?</h3>
+              <p>
+                Sim, você pode definir os valores mínimo e máximo para o
+                intervalo dos números sorteados.
+              </p>
+            </div>
+          </div>
+        </section>
+      </main>
+    </div>
   </body>
 </html>
