feat: add style header and section information

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <script src="./scripts/index.js" defer></script>
   </head>
   <body>
-    <div>
+    <div class="app">
       <nav>
-        <img src="" alt="" />
-        <p></p>
+        <img src="./assets/logo.png" alt="" />
+        <span>NUMBERS</span>
       </nav>
       <main>
         <div>
@@ -30,7 +30,7 @@
           </header>
         </div>
 
-        <section>
+        <section class="containerResult">
           <div>
             <header>
               <h2>Quero sortear:</h2>
@@ -115,11 +115,11 @@
           </div>
         </section>
 
-        <section>
-          <div>
-            <img src="" alt="" />
+        <section class="containerInformations">
+          <div class="boxInformation">
+            <img src="./assets/Baloon.svg" alt="" />
             <div>
-              <h3>Como funciona o sorteador de núemros?</h3>
+              <h3>Como funciona o sorteador de números?</h3>
               <p>
                 O sorteador utiliza um algoritmo de geração aleatória para criar
                 números dentro do intervalo especificado pelo usuário.
@@ -127,8 +127,8 @@
             </div>
           </div>
 
-          <div>
-            <img src="" alt="" />
+          <div class="boxInformation">
+            <img src="./assets/Baloon.svg" alt="" />
             <div>
               <h3>Posso escolher o intervalo dos números?</h3>
               <p>
